API permissions configured